--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -80,7 +80,7 @@
         }
         else if (rol == "Investigador")
         {
-            NavigationManager.NavigateTo("/investigador");
+            NavigationManager.NavigateTo("/adminInicio");
         }
         else
         {
