--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -26,5 +26,7 @@
 
     <!-- JS de Radzen -->
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+    <script src="js/downloadHelper.js"></script>
+
 </body>
 </html>
